--- a/seif/ALBUMS.css
+++ b/seif/ALBUMS.css
@@ -1,14 +1,3 @@
-<html>
-<title> Engagements' gallery </title>
-
-<head>
-    <link rel="stylesheet" type="text/css" href="navbar.css">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" href="C:\Users\Seif\Desktop\LB_Editedb.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-</head>
-
-<style>
 body {
     border: 100px solid #e7e7e7;
 }
@@ -19,8 +8,10 @@ body {
     box-sizing: border-box;
 }
 
+
 /*
 /*basic color*/
+
 :root {
     --primary-color: white;
     --secondary-color: black;
@@ -33,10 +24,11 @@ body {
     --eigth-color: #DBD0D0;
     --ninth-color: #C73636;
     --tenth-color: white;
-
 }
 
+
 /*After Changing*/
+
 .dark-theme {
     --primary-color: black;
     --secondary-color: white;
@@ -117,7 +109,6 @@ header nav {
     display: -ms-flex;
     display: -o-flex;
     display: flex;
-
 }
 
 header nav i {
@@ -165,29 +156,23 @@ header nav li:last-child {
     header {
         flex-direction: column;
     }
-
     header h2 {
         margin-bottom: 15px;
     }
-
     header nav li {
         margin: 0 14px;
         margin-top: 30px;
     }
-
     #icon {
         margin-top: 30px;
         width: 20;
         height: 20;
     }
-
     #icon2 {
         width: 135;
         height: 40;
     }
-
     header nav li a {
-
         font-size: 16px;
     }
 }
@@ -216,11 +201,11 @@ section {
 }
 
 section p {
-    max-width: 800px text-align:center;
+    max-width: 800px;
+    text-align: center;
     margin-bottom: 0 20px;
     line-height: 2;
 }
-
 
 .end {
     width: 100%;
@@ -328,10 +313,6 @@ div.desc {
     margin-top: 1px;
 }
 
-* {
-    box-sizing: border-box;
-}
-
 @media only screen and (max-width: 700px) {
     .responsive {
         width: 49.99999%;
@@ -344,86 +325,3 @@ div.desc {
         width: 100%;
     }
 }
-</style>
-
-<body width="600" height="600">
-
-
-    <h1 class="tit"> Engagements </h1>
-
-    <div class="responsive">
-        <div class="gallery">
-            <a target="_blank" href="eng1.php">
-                <img src="1e.jpg" width="400" height="300">
-            </a>
-            <div class="desc"> Album, press to open </div>
-        </div>
-    </div>
-
-    <div class="responsive">
-        <div class="gallery">
-            <a target="_blank" href="eng2.php">
-                <img src="2e.jpg" width="400" height="300">
-            </a>
-            <div class="desc"> Album, press to open </div>
-        </div>
-    </div>
-
-    <div class="responsive">
-        <div class="gallery">
-            <a target="_blank" href="eng3.php">
-                <img src="e33.jpg" width="400" height="300">
-            </a>
-            <div class="desc"> Album, press to open </div>
-        </div>
-    </div>
-
-    <div class="responsive">
-        <div class="gallery">
-            <a target="_blank" href="eng4.php">
-                <img src="44e.jpg" width="400" height="300">
-            </a>
-            <div class="desc"> Album, press to open </div>
-        </div>
-    </div>
-
-    <header>
-        <img src="LL.png" alt="Afnan Logo" id="icon2">
-        <nav>
-            <li><a href='home.html'><i class="fas fa-home"></i>Home</a></li>
-            <li><a href='About us.html'><i class="fas fa-info-circle"></i>About us</a></li>
-            <li><a href='Albums.html'><i class="fas fa-images"></i>Albums</a></li>
-            <li><a href='BookingTable.php'><i class="fas fa-table"></i>Book Now</a></li>
-
-            <img src="moon.png" alt="moon" id="icon">
-        </nav>
-    </header>
-
-
-    <div class="social-links">
-        <a href="https://www.facebook.com/afnang.gharib.photography/?ti=as" target="_blank" id="facebook"><i
-                class="fab fa-facebook"></i>Facebook</a>
-        <a href="https://instagram.com/afnan.gharib.photography?igshid=agmkz7yj2w78" target="_blank" id="instgram"><i
-                class="fab fa-instagram"></i>Instgram </a>
-        <a href="https://vm.tiktok.com/ZMeuNFDKS/" id="tiktok" target="_blank"><i class="fab fa-tiktok"></i>Tiktok</a>
-    </div>
-
-    <footer>
-        <p>All Rigth Reserved by your website</p>
-    </footer>
-    <script>
-    var icon = document.getElementById("icon");
-    icon.onclick = function() {
-        document.body.classList.toggle("dark-theme");
-        if (document.body.classList.contains("dark-theme")) {
-            icon.src = "sun.png";
-        } else {
-            icon.src = "moon.png";
-        }
-    }
-    </script>
-
-
-</body>
-
-</html>
