--- a/Login_Form.css
+++ b/Login_Form.css
@@ -1,4 +1,4 @@
-	form{
+		form{
 		border: 3px solid lightgrey;
 		border-radius:10px ;
 		width: 400px;
@@ -7,15 +7,11 @@
 		margin-top: 250px;
 		background: white;
 	}
-	.ab{
-		margin-top: 110px;
-	}
-	 img{
-		position: absolute;
-		width: 120px;
+	.image
+	{
+				width: 120px;
 		height: 120px;
 		margin-left: 130px;
-		
 	}
 	label{
 		padding: 3px;
